--- a/02-Data.Rmd
+++ b/02-Data.Rmd
@@ -18,15 +18,15 @@ library(cowplot)
 <!--## What are data? -->
 ## ¿Qué son los datos?
 
-<!--The first important point about data is that data *are* -- meaning that the word "data" is plural (though some people disagree with me on this).  You might also wonder how to pronounce "data" -- I say "day-tah", but I know many people who say "dah-tah", and I have been able to remain friends with them in spite of this. Now if I heard them say "the data is" then that would be a bigger issue...-->
+<!--The first important point about data is that data *are* -- meaning that the word "data" is plural (though some people disagree with me on this).  You might also wonder how to pronounce "data" -- I say "day-tah", but I know many people who say "dah-tah", and I have been able to remain friends with them in spite of this. Now, if I heard them say "the data is" then that would be a bigger issue...-->
 Cuando hablamos de los datos lo hacemos en plural. Si te encuentras buscando información de estadística en inglés y aparece como "data", recuerda que se trata de una palabra que siempre permanece en plural. 
 
 
 <!--### Qualitative data
-Data are composed of *variables*, where a variable reflects a unique measurement or quantity.  Some variables are *qualitative*, meaning that they describe a quality rather than a numeric quantity.  For example, in my stats course I generally give an introductory survey, both to obtain data to use in class and to learn more about the students. One of the questions that I ask is "What is your favorite food?", to which some of the answers have been: blueberries, chocolate, tamales, pasta, pizza, and mango.  Those data are not intrinsically numerical; we could assign numbers to each one (1=blueberries, 2=chocolate, etc), but we would just be using the numbers as labels rather than as real numbers; for example, it wouldn't make sense to add the numbers together in this case.  However, we will often code qualitative data using numbers in order to make them easier to work with, as you will see later.-->
+Data are composed of *variables*, where a variable reflects a unique measurement or quantity.  Some variables are *qualitative*, meaning that they describe a quality rather than a numeric quantity.  For example, in my stats course I generally give an introductory survey, both to obtain data to use in class and to learn more about the students. One of the questions that I ask is "What is your favorite food?", to which some of the answers have been: blueberries, chocolate, tamales, pasta, pizza, and mango.  Those data are not intrinsically numerical; we could assign numbers to each one (1=blueberries, 2=chocolate, etc), but we would just be using the numbers as labels rather than as real numbers.  This also constrains what we should do with those numbers; for example, it wouldn't make sense to compute the average of those numbers.  However, we will often code qualitative data using numbers in order to make them easier to work with, as you will see later.-->
 ### Datos Cualitativos
 
-Los datos se componen de *variables*, en donde una variable refleja una medida o cantidad única. Algunas variables son *cualitativas*, lo que significa que describen una cualidad en lugar de una cantidad numérica. Por ejemplo, en mi curso de estadística generalmente doy un cuestionario introductorio, con el propósito de obtener datos que pueda usar en clase y para aprender más sobre los estudiantes. Una de las preguntas que hago es "¿Cuál es tu comida favorita?", a lo cual algunas de las respuestas han sido: arándanos, chocolate, tamales, pasta, pizza y mango. Esos datos no son esencialmente numéricos; podríamos asignarles números a cada uno (1=arándanos, 2=chocolate, etc), pero solamente estaríamos utilizando los números como etiquetas en lugar de números reales; por ejemplo, no tendría sentido sumar los números en este caso. Sin embargo, a menudo codificaremos datos cualitativos utilizando números para poder trabajar más facilmente con ellos, como verán más adelante en este libro. 
+Los datos se componen de *variables*, en donde una variable refleja una medida o cantidad única. Algunas variables son *cualitativas*, lo que significa que describen una cualidad en lugar de una cantidad numérica. Por ejemplo, en mi curso de estadística generalmente doy un cuestionario introductorio, con el propósito de obtener datos que pueda usar en clase y para aprender más sobre los estudiantes. Una de las preguntas que hago es "¿Cuál es tu comida favorita?", a lo cual algunas de las respuestas han sido: arándanos, chocolate, tamales, pasta, pizza y mango. Esos datos no son esencialmente numéricos; podríamos asignarles números a cada uno (1=arándanos, 2=chocolate, etc), pero solamente estaríamos utilizando los números como etiquetas en lugar de números reales. Esto también restringe lo que podríamos hacer con esos números; por ejemplo, no tendría sentido el calcular el promedio de esos números. Sin embargo, a menudo codificaremos datos cualitativos utilizando números para poder trabajar más facilmente con ellos, como verán más adelante en este libro. 
 
 <!--### Quantitative data
 More commonly in statistics we will work with *quantitative* data, meaning data that are numerical.  For example, here Table \@ref(tab:WhyTakingClass) shows the results from another question that I ask in my introductory class, which is "Why are you taking this class?"-->
@@ -56,10 +56,10 @@ knitr::kable(
 Nota que las respuestas de los estudiantes fueron cualitativas, pero generamos un resumen cuantitativo de ellos contando cuántos estudiantes respondieron a cada opción.
 
 <!--#### Types of numbers
-There are several different types of numbers that we work with in statistics.  It's important to understand these differences, in part because programming languages like R often distinguish between them.-->
+There are several different types of numbers that we work with in statistics.  It's important to understand these differences, in part because statistical analysis languages like R often distinguish between them.-->
 ### Tipos de números
 
-Existen varios tipos diferentes de números con los que trabajamos en estadística. Es importante entender estas diferencias, en parte porque los lenguajes de programación como R a menudo los distinguen. 
+Existen varios tipos diferentes de números con los que trabajamos en estadística. Es importante entender estas diferencias, en parte porque los lenguajes para análisis estadístico como R a menudo los distinguen. 
 
 <!--**Binary numbers**. The simplest are binary numbers -- that is, zero or one.  We will often use binary numbers to represent whether something is true or false, or present or absent.  For example, I might ask 10 people if they have ever experienced a migraine headache, recording their answers as "Yes" or "No".  It's often useful to instead use *logical* values, which take the value of either ```TRUE``` or ```FALSE```.  This can be especially useful when we start using programming languages like R to analyze our data, since these languages already understand the concepts of TRUE and FALSE.  In fact, most programming languages treat truth values and binary numbers equivalently. The number 1 is equal to the logical value ```TRUE```, and the number zero is equal to the logical value ``FALSE``.-->
 **Números binarios**. Los más simples son los números binarios -- cero ó uno. A menudo usaremos números binarios para representar si algo es verdadero o falso, o presente o ausente. Por ejemplo, puede que le pregunte a 10 personas si alguna vez han tenido dolor de cabeza por migraña, registrando sus respuestas como "Sí" ó "No". En ocasiones es útil usar valores *lógicos*, los cuales toman los valores de ```VERDADERO``` o ```FALSO```. Esto puede ser especialmente útil cuando comenzamos a utilizar lenguajes de programación como R para analizar nuestros datos, ya que, estos lenguajes comprenden los conceptos de VERDADERO y FALSO. De hecho, la mayoría de los lenguajes de programación tratan los valores de verdad y los números binarios de manera equivalente. El número 1 es igual al valor lógico ```VERDADERO```, y el número cero es igual al valor lógico ```FALSO```.   
@@ -71,10 +71,10 @@ Existen varios tipos diferentes de números con los que trabajamos en estadísti
 **Números reales**. En estadística trabajamos más comunmente con números reales, los cuales tienen parte fraccionaria o decimal. Por ejemplo, cuando medimos el peso de alguien, éste puede ser medido a un nivel arbitrario de precisión, desde kilogramos hasta microgramos. 
 
 <!--## Discrete versus continuous measurements
-A *discrete* measurement is one that takes one of a set of particular values.  These could be qualitative values (for example, different breeds of dogs) or numerical values (for example, how many friends one has on Facebook).  Importantly, there is no middle ground between the measurements; it doesn't make sense to say that one has 33.7 friends.-->
+A *discrete* measurement is one that takes one of a finite set of particular values.  These could be qualitative values (for example, different breeds of dogs) or numerical values (for example, how many friends one has on Facebook).  Importantly, there is no middle ground between the measurements; it doesn't make sense to say that one has 33.7 friends.-->
 ## Mediciones Discretas versus Continuas 
 
-Una medición *discreta* es aquella que toma uno de un conjunto de valores particulares. Estos pueden ser valores cualitativos (por ejemplo, diferentes tipos de razas de perros) o valores numéricos (por ejemplo, cuántos amigos tiene une en facebook). Es importante recordar que, no hay punto medio en las medidas; no tiene sentido decir que une tiene 33.7 amigues.
+Una medición *discreta* es aquella que toma uno de un conjunto finito de valores particulares. Estos pueden ser valores cualitativos (por ejemplo, diferentes tipos de razas de perros) o valores numéricos (por ejemplo, cuántos amigos tiene une en facebook). Es importante recordar que, no hay punto medio en las medidas; no tiene sentido decir que une tiene 33.7 amigues.
 
 <!--A *continuous* measurement is one that is defined in terms of a real number. It could fall anywhere in a particular range of values, though usually our measurement tools will limit the precision with which we can measure it; for example, a floor scale might measure weight to the nearest kg, even though weight could in theory be measured with much more precision.-->
 Una medición *continua* es aquella que es definida en términos de un número real. Puede encontrarse en cualquier parte de un rango particular de valores, aunque usualmente nuestras herramientas de medición pueden limitar la precisión con la que podemos medirla; por ejemplo, una báscula de piso puede medir el peso al kilogramo más cercano, aunque en teoría el peso puede ser medido con mucha mayor precisión.
@@ -88,8 +88,8 @@ En los cursos de estadística es común revisar con más detalle las diferentes 
 <!--In many fields such as psychology, the thing that we are measuring is not a physical feature, but instead is an unobservable theoretical concept, which we usually refer to as a *construct*.  For example, let's say that I want to test how well you understand the distinction between the different types of numbers described above.  I could give you a pop quiz that would ask you several questions about these concepts and count how many you got right.  This test might or might not be a good measurement of the construct of your actual knowledge -- for example, if I were to write the test in a confusing way or use language that you don't understand, then the test might suggest you don't understand the concepts when really you do. On the other hand, if I give a multiple choice test with very obvious wrong answers, then you might be able to perform well on the test even if you don't actually understand the material.-->  
 En muchas áreas, como en la psicología, aquello que estamos midiendo no es una característica física, sino más bien un concepto teórico inobservable, a lo cual usualmente nos referimos como un *constructo*. Por ejemplo, digamos que quiero probar qué tan bien entiendes la distinción entre los diferentes tipos de números descritos anteriormente. Te podría dar un examen sorpresa en donde te haría varias preguntas sobre estos conceptos y contaría cuántas respuestas tienes correctas. Esta prueba puede o puede no ser una buena medición del constructo de tu conocimiento real-- por ejemplo, si escribiera una prueba en una forma confusa o un lenguaje que tú no entiendes, entonces la prueba puede sugerir que no entiendes los conceptos cuando en realidad sí los entiendes. Por otro lado, si te doy una prueba de opción múltiple con muchas respuestas obviamente incorrectas, entonces es posible que puedas desempeñarte bien en la prueba, incluso si en realidad no comprendes el material. 
 
-<!--It is usually impossible to measure a construct without some amount of error.  In the example above, you might know the answer, but you might mis-read the question and get it wrong.  In other cases, there is error intrinsic to the thing being measured, such as when we measure how long it takes a person to respond on a simple reaction time test, which will vary from trial to trial for many reasons. We generally want our measurement error to be as low as possible.-->
-Usualmente es imposible medir un constructo sin cierto margen de error. En el ejemplo de arriba, puede que sepas la respuesta, pero puede que hayas leído mal la pregunta y por ende, obtenido una respuesta incorrecta. En otros casos, puede haber errores intrínsecos con respecto a aquella cosa que quiere ser medida, como cuando medimos cuánto le toma a una persona reaccionar en una simple prueba de tiempo de reacción, las cuales pueden variar de prueba en prueba por muchas razones. Generalmente queremos que nuestro error de medición sea lo más bajo posible.  
+<!--It is usually impossible to measure a construct without some amount of error.  In the example above, you might know the answer, but you might mis-read the question and get it wrong.  In other cases, there is error intrinsic to the thing being measured, such as when we measure how long it takes a person to respond on a simple reaction time test, which will vary from trial to trial for many reasons. We generally want our measurement error to be as low as possible, which we can achieve either by improving the quality of the measurement (for example, using a better time to measure reaction time), or by averaging over a larger number of indvidiual measurements.   -->
+Usualmente es imposible medir un constructo sin cierto margen de error. En el ejemplo de arriba, puede que sepas la respuesta, pero puede que hayas leído mal la pregunta y por ende, obtenido una respuesta incorrecta. En otros casos, puede haber errores intrínsecos con respecto a aquella cosa que quiere ser medida, como cuando medimos cuánto le toma a una persona reaccionar en una simple prueba de tiempo de reacción, las cuales pueden variar de prueba en prueba por muchas razones. Generalmente queremos que nuestro error de medición sea lo más bajo posible, lo que podemos lograr mejorando la calidad de nuestras mediciones (por ejemplo, usando una mejor medición del tiempo para medir el tiempo de reacción), o promediando un mayor número de mediciones individuales.
 
 <!--Sometimes there is a standard against which other measurements can be tested, which we might refer to as a "gold standard" -- for example, measurement of sleep can be done using many different devices (such as devices that measure movement in bed), but they are generally considered inferior to the gold standard of polysomnography (which uses measurement of brain waves to quantify the amount of time a person spends in each stage of sleep).  Often the gold standard is more difficult or expensive to perform, and the cheaper method is used even though it might have greater error.-->
 A veces existe un estándar con el que se pueden probar otras mediciones, al que podríamos referirnos como un "estándar dorado" -- por ejemplo, la medición del sueño se puede realizar utilizando muchos dispositivos diferentes (como dispositivos que miden el movimiento de una persona mientras duerme), pero generalmente se consideran inferiores al estandar dorado de la polisomnografía (el cual es un examen que mide ondas cerebrales para cuantificar la cantidad de tiempo que una persona pasa en cada etapa del sueño). A menudo, el estandar dorado es más difícil o más caro de utilizar, y el método más barato es usado incluso cuando pueda tener un mayor margen de error. 
@@ -106,8 +106,8 @@ La confiabilidad se refiere a la consistencia de nuestras mediciones. Una forma 
 <!--Another way to assess reliability comes in cases where the data include subjective judgments.  For example, let's say that a researcher wants to determine whether a treatment changes how well an autistic child interacts with other children, which is measured by having experts watch the child and rate their interactions with the other children.  In this case we would like to make sure that the answers don't depend on the individual rater --- that is, we would like for there to be high *inter-rater reliability*.  This can be assessed by having more than one rater perform the rating, and then comparing their ratings to make sure that they agree well with one another.-->
 Otra forma de evaluar la confiabilidad surge en casos en que los datos incluyen juicios subjetivos. Por ejemplo, digamos que unx investigadorx quiere determinar si un tratamiento cambia qué tan bien interactúa unx niñx que se encuentra dentro del espectro autista con otros niñxs, lo cual es medido a través de expertos que observan al niñx y califican sus interacciones con lxs otrxs niñxs. En este caso queremos asegurarnos de que las respuestas no dependan del individuo que está calificando-- nos gustaría que existiera una alta *confiabilidad entre calificadores*. Esto puede ser evaluado teniendo más de unx solx evaluadorx, y después al comparar sus calificaciones asegurarnos de que concuerden entre sí.   
 
-<!--Reliability is important if we want to compare one measurement to another.  The relationship between two different variables can't be any stronger than the relationship between either of the variables and itself (i.e., its reliability).  This means that an unreliable measure can never have a strong statistical relationship with any other measure.  For this reason, researchers developing a new measurement (such as a new survey) will often go to great lengths to establish and improve its reliability.-->
-La confiabilidad es importante si queremos comparar una medición con otra. La relación entre dos variables diferentes no puede ser más fuerte que la relación entre cualquiera de las variables y ella misma (es decir, su confiabilidad). Esto significa que una medición no confiable nunca puede tener una relación estadísticamente fuerte con cualquier otra medición. Por esta razón, lxs investigadorxs que desarrollan una nueva medición (como un nuevo cuestionario) a menudo realizarán todo lo posible para establecer y mejorar su confiabilidad. 
+<!--Reliability is important if we want to compare one measurement to another, because the relationship between two different variables can't be any stronger than the relationship between either of the variables and itself (i.e., its reliability).  This means that an unreliable measure can never have a strong statistical relationship with any other measure.  For this reason, researchers developing a new measurement (such as a new survey) will often go to great lengths to establish and improve its reliability.-->
+La confiabilidad es importante si queremos comparar una medición con otra, porque la relación entre dos variables diferentes no puede ser más fuerte que la relación entre cualquiera de las variables y ella misma (es decir, su confiabilidad). Esto significa que una medición no confiable nunca puede tener una relación estadísticamente fuerte con cualquier otra medición. Por esta razón, lxs investigadorxs que desarrollan una nueva medición (como un nuevo cuestionario) a menudo realizarán todo lo posible para establecer y mejorar su confiabilidad. 
 
 ```{r ReliabilityValidity, echo=FALSE,fig.cap="A figure demonstrating the distinction between reliability and validity, using shots at a bullseye. Reliability refers to the consistency of location of shots, and validity refers to the accuracy of the shots with respect to the center of the bullseye. ",fig.width=6,fig.height=6,out.height='33%'}
 # Figure inspired by https://commons.wikimedia.org/wiki/File:Reliability_and_validity.svg
